fix mobile view hidden under address bar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -85,7 +85,7 @@ select {
 
 #root {
   /* React root div */
-  min-height: 100vh;
+  min-height: 100svh;
   display: flex;
   flex-flow: column nowrap;
 }
